# spc-generator

./: .gitignore  Launch_GUI.bat  README.md  SPC_Tool_GUI.pyw  get-template.bat  install.bat  pyproject.toml
archive/: run.bat
docs/: TESTING.md  USER_GUIDE.md
examples/: SPC-DATA_Input_Template.xlsx
src/spc_generator/: __init__.py  generator.py  template.py
tests/: conftest.py  test_examples.py  test_spc_generator.py
