[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spc_generator"
version = "1.0.0"
description = "Automated SPC charts and histograms from Excel data"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scipy",
    "fpdf",
    "openpyxl",
    "rich",        
    "questionary"  
]

[project.scripts]
spc-gen = "spc_generator.generator:main"
spc-template = "spc_generator.template:main"

[tool.setuptools.packages.find]
where = ["src"]